objects/LLC_BI__Automated_Clearing_House_Service__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__ACH_Block_Request_Type__c</fullName>
        <label>ACH Block Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ACH_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ACH_Filter_Request_Type__c</fullName>
        <label>ACH Filter Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ACH_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Customer_Contact_for_Rejects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact for Rejects</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Automated Clearing House Service</relationshipLabel>
        <relationshipName>Automated_Clearing_House_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EDI_Reporting_Format__c</fullName>
        <description>The format in which the customer would like their EDI Report.</description>
        <label>EDI Reporting Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__EDI_Reporting_Type__c</fullName>
        <description>The type of report that the Customer requested for EDI Reporting.</description>
        <label>EDI Reporting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__EDI_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if customer would like EDI Reporting</description>
        <label>EDI Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Originator_Company_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator Company ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Originator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originator Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Automated Clearing House Service (Originator Name)</relationshipLabel>
        <relationshipName>Automated_Clearing_House_Service1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Expiration__c</fullName>
        <label>Request Expiration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>No Expiration</fullName>
                </value>
                <value>
                    <fullName>Specified Expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Select_Applicable_Accounts_to_Block__c</fullName>
        <description>Is it possible to have the Records from the Deposit Object related to an Account display in this multi-select picklist?</description>
        <label>Select Applicable Accounts to Block</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Populate from Deposit Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service Reference</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Automated Clearing House Service</relationshipLabel>
        <relationshipName>Automated_Clearing_House_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Automated Clearing House Service</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Automated Clearing House Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Clearing House Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>